# Research-Papers

./: README  README.md  llvm-irc.txt
Compiler Optimisations & IR/: ssa-lambda.ps.ps
Databases/Fundamentals of SQL Processing/: 4.Yannakakis.Algorithm.ppt
Databases/OLAP - SQL/: Complexity of Answering Queries Using Materialized Views
PL/: nikhil-1993-parallel_id
Quals/: Schedule.md
Quals/Security/: Summaries.md  Using Programmer-Written Compiler Extensions to Catch Security Holes.ps
Read/: Thumbs.db
Reading/: Thumbs.db
Reference Papers/: Thumbs.db
To Read/: Thumbs.db  at-syns.ps.ps  hmap.ps
To Read/typenats-0.2-source/: LICENSE  README  TypeNats.cabal
To Read/typenats-0.2-source/src/: TypeList.hs  TypeNats.hs  TypePrimes.hs
To Read/typenats-0.2-source/test/: MkTypeNats.hs  Nats.hs  Test.hs
